--- a/public/reports/browser.html
+++ b/public/reports/browser.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Pui Tim Cheng">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cse135 final project BROWSERS PAGE</title>
-    <link rel="stylesheet" type="text/css" href="/styles/main.css">
+    <link rel="stylesheet" type="text/css" href="/styles/analytics.css">
     <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-auth.js"></script>
     <link rel="stylesheet" href="../jqwidgets/styles/jqx.base.css" type="text/css" />
@@ -17,30 +17,26 @@
         <meta http-equiv="refresh" content="0; url=https://cse135hw5timeben.firebaseapp.com/login.html" />
     </noscript>
     <script src="../scripts/authcheck.js"></script>
-    <style>
-        * {
-            text-align: center;
-            margin: auto;
-        }
-    </style>
 </head> 
 
 <body>
-    <h1>Ben & Tim Analytics</h1>
-    <hr>
-    <h3>Browser Information:</h3>
-    <div>
+    <h1 class="darkgreen">Ben & Tim Analytics</h1>
+    <h3 class="darkgreen">Browser Information:</h3>
+    <div class = "darkgreen">
         <span id="loginStatus"></span>
         <button id="btn_logout">Logout</button>
         <script src="../scripts/logout.js"></script>
     </div>
 
-    <a href="../dashboard.html">To DashBoard</a>
-    <a href="browser.html">Show Browser Data</a>
-    <a href="speed.html">Show Speed Data</a>
+    <div class="darkgreen">
+        <a class="clickable" href="../dashboard.html">DashBoard</a>
+        <a class="clickable" href="browser.html">Browser Data</a>
+        <a class="clickable" href="speed.html">Speed Data</a>
+    </div>
+
 
     <hr>
-    <div style="align-self: center; margin: auto;" id="dataTable">
+    <div class="ricewhite" style="align-self: center; margin: auto;" id="dataTable">
     </div>
     <script src="../scripts/browser.js"></script>
 
