--- a/public/reports/browser.html
+++ b/public/reports/browser.html
@@ -23,21 +23,23 @@
     <h1 class="darkgreen">Ben & Tim Analytics</h1>
     <h3 class="darkgreen">Browser Information:</h3>
     <div class = "darkgreen">
-        <span id="loginStatus"></span>
+        <span id="loginStatus">Loading...</span>
         <button id="btn_logout">Logout</button>
         <script src="../scripts/logout.js"></script>
     </div>
 
     <div class="darkgreen">
         <a class="clickable" href="../dashboard.html">DashBoard</a>
-        <a class="clickable" href="browser.html">Browser Data</a>
+        <a class="clickable active" href="browser.html">Browser Data</a>
         <a class="clickable" href="speed.html">Speed Data</a>
     </div>
 
-
-    <hr>
-    <div class="ricewhite" style="align-self: center; margin: auto;" id="dataTable">
+    <div class="ricewhite">
+        <div class="ricewhite" style="align-self: center; margin: auto;" id="dataTable">
+            Loading...
+        </div>
     </div>
+
     <script src="../scripts/browser.js"></script>
 
 </body>
