--- a/public/login.html
+++ b/public/login.html
@@ -10,19 +10,14 @@
     <link rel="stylesheet" type="text/css" href="/styles/main.css">
     <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-auth.js"></script>
+    <link rel="stylesheet" type="text/css" href="/styles/analytics.css">
 </head>
 
-<body>
-    <h1>Ben & Tim Analytics</h1>
+<body class="ricewhite">
+    <h1 class="darkgreen">Ben & Tim Analytics</h1>
     <hr>
     <button id="btn_login">log in </button>
     <script src="scripts/login.js"></script>
-    <style>
-        * {
-            text-align: center;
-            margin: auto;
-        }
-    </style>
 </body>
 
 </html>
