added a cancel button to edit dialog

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -91,7 +91,10 @@
                                     let dialog = document.createElement('dialog');
                                     let form = document.createElement('form');
                                     dialog.appendChild(form);
-                                    form.innerHTML = '<label>Change To Level:</label><select id="level"><option value="Admin">Admin</option><option value="Analyst">Analyst</option></select><button type="submit">Submit</button>';
+                                    form.innerHTML = '<label>Change To Level:</label><select id="level"><option value="Admin">Admin</option><option value="Analyst">Analyst</option></select><br><button id="cancel">Cancel</button><button type="submit">Submit</button>';
+                                    form.querySelector('#cancel').addEventListener("click", () => {
+                                        form.parentNode.parentNode.removeChild(dialog);
+                                    })
                                     form.addEventListener("submit", (e) => {
                                         e.preventDefault();
                                         let tolevel = form.querySelector("#level").value;
